--- a/data-engineer.html
+++ b/data-engineer.html
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
+<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -203,7 +203,7 @@
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://welltok.applytojob.com/apply/Ee7yHBXC4t/Software-Data-Engineering-Manager'>Software Data Engineering Manager - Welltok - Career Page</a></h5> 
+<h5><a href='https://welltok.applytojob.com/apply/Ee7yHBXC4t/Software-Data-Engineering-Manager'>Software Data Engineering Manager - Welltok - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Software Data Engineering Manager at Welltok in Boston, MA.</p>
 <hr/>
@@ -215,7 +215,7 @@
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tucows/job/oeCqbfwb'>Tucows Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario  Canada Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -236,7 +236,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Oakland, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -354,7 +354,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -366,7 +366,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697931703-data-engineer-web-developer-12-month-placement-'>Inmarsat Data Engineer & Web Developer (12 Month Placement) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697931703-data-engineer-web-developer-12-month-placement-'>Inmarsat Data Engineer & Web Developer (12 Month Placement) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -427,7 +427,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Seattle, Washington  Seattle</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/445101-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/445101-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -443,7 +443,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
+<h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
